--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,10 +42,12 @@ actix-files = "0.4.1"
 actix-web = "3.2.0"
 chrono = { version = "0.4.19", features = ["unstable-locales"] }
 clap = { version = "3.0.0-beta.2", features = ["yaml", "wrap_help"] }
+futures = "0.3.8"
 glob = "0.3.0"
 liquid = "0.21.4"
 liquid-core = "0.21.2"
 liquid-lib = { version = "0.21.1", features = ["stdlib", "jekyll", "shopify", "extra"] }
+notify = "4.0.15"
 pathdiff = "0.2.0"
 pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
 serde = "1.0.117"
