--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -24,12 +24,13 @@ jobs:
           args: --release --all-features --target x86_64-apple-darwin
       - name: Prepare Dokkoo for upload
         run: |
-          strip ./target/x86_64-apple-darwin/release/dokkoo
-          chmod +x ./target/x86_64-apple-darwin/release/dokkoo
+          cd ./target/x86_64-apple-darwin/release/
+          strip ./dokkoo
+          chmod +x ./dokkoo
           tar -cvf x86_64-dokkoo.osx.tar \
-          ./target/x86_64-apple-darwin/release/dokkoo \
-          ./target/x86_64-apple-darwin/release/libdokkoo.dylib \
-          ./target/x86_64-apple-darwin/release/libdokkoo.a
+          dokkoo \
+          libdokkoo.dylib \
+          libdokkoo.a
       - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
