--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,10 +24,11 @@ jobs:
           args: --release --all-features --target x86_64-pc-windows-msvc
       - name: Prepare Dokkoo for upload
         run: |
+          cd ./target/x86_64-pc-windows-msvc/release/
           tar -czvf x86_64-dokkoo.win32.zip `
-          ./target/x86_64-pc-windows-msvc/release/dokkoo.exe `
-          ./target/x86_64-pc-windows-msvc/release/dokkoo.dll `
-          ./target/x86_64-pc-windows-msvc/release/dokkoo.lib
+          dokkoo.exe `
+          dokkoo.dll `
+          dokkoo.lib
       - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
