--- a/.github/workflows/x86_64.yml
+++ b/.github/workflows/x86_64.yml
@@ -24,14 +24,15 @@ jobs:
           args: --release --all-features --target x86_64-unknown-linux-gnu
       - name: Prepare Dokkoo for upload
         run: |
-          strip -v --strip-all ./target/x86_64-unknown-linux-gnu/release/dokkoo
-          strip -v --strip-all ./target/x86_64-unknown-linux-gnu/release/libdokkoo.so
-          strip -v --strip-all ./target/x86_64-unknown-linux-gnu/release/libdokkoo.a
-          chmod +x ./target/x86_64-unknown-linux-gnu/release/dokkoo
+          cd ./target/x86_64-unknown-linux-gnu/release/
+          strip -v --strip-all ./dokkoo
+          strip -v --strip-all ./libdokkoo.so
+          strip -v --strip-all ./libdokkoo.a
+          chmod +x ./dokkoo
           tar -cvf x86_64-dokkoo.gnu+linux.tar \
-          ./target/x86_64-unknown-linux-gnu/release/dokkoo \
-          ./target/x86_64-unknown-linux-gnu/release/libdokkoo.so \
-          ./target/x86_64-unknown-linux-gnu/release/libdokkoo.a
+          dokkoo \
+          libdokkoo.so \
+          libdokkoo.a
       - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
