--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ version = "0.2.0"
 authors = ["Emil Sayahi <limesayahi@gmail.com>"]
 edition = "2018"
 categories = ["command-line-utilities", "parser-implementations", "text-processing"]
-exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "/azure-pipelines.yml", "/snapcraft.yaml", "/TODO.md"]
+exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "renovate.json", "/azure-pipelines.yml", "/snapcraft.yaml", "/TODO.md"]
 license = "AGPL-3.0-or-later"
 description = "Mokk (Macro Output Key Kit) implementation written in Rust."
 repository = "https://github.com/MadeByEmil/dokkoo"
