--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -26,8 +26,9 @@ jobs:
         with:
           toolchain: nightly
           target: x86_64-unknown-linux-gnu
-          override: true
-          components: rust-src
+          default: true
+          profile: minimal
+          #components: rust-src
       - name: Install 'cargo-aur'
         uses: actions-rs/cargo@v1
         with:
