--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -14,8 +14,9 @@ jobs:
         with:
           toolchain: nightly
           target: x86_64-unknown-linux-gnu
-          override: true
-          components: rust-src
+          default: true
+          profile: minimal
+          #components: rust-src
       - name: Install 'cargo-deb'
         uses: actions-rs/cargo@v1
         with:
