--- a/.github/workflows/format_code.yml
+++ b/.github/workflows/format_code.yml
@@ -19,7 +19,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-          components: rust-src, clippy, rustfmt
+          profile: minimal
+          components: clippy, rustfmt
       - name: Format code files
         uses: actions-rs/cargo@v1
         with:
