--- a/.github/workflows/publish_crate.yml
+++ b/.github/workflows/publish_crate.yml
@@ -15,7 +15,8 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-          components: rust-src, clippy, rustfmt
+          profile: minimal
+          #components: rust-src, clippy, rustfmt
       - name: Login to crates.io
         uses: actions-rs/cargo@v1
         with:
