--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -24,8 +24,9 @@ jobs:
         with:
           toolchain: nightly
           target: x86_64-unknown-linux-gnu
-          override: true
-          components: rust-src
+          default: true
+          profile: minimal
+          #components: rust-src
       - name: Install 'cargo-rpm'
         uses: actions-rs/cargo@v1
         with:
