Add arguments to documentation generation

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,22 +16,23 @@ jobs:
       uses: actions/checkout@v2
       with:
           path: ./dokkoo
-    - name: Generate documentation
-      uses: actions-rs/cargo@v1
-      with:
-        command: doc
     - name: Checkout GitHub Pages environment
       uses: actions/checkout@v2
       with:
           ref: gh-pages
           path: ./gh-pages
           token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Move generated documentation to GitHub Pages environment
+    - name: Generate documentation
       run: |
           sudo apt-get -qq install tree > /dev/null
           printf "Files to build:\n" && tree ./mokk
           find ./gh-pages -mindepth 1 ! -regex '^./gh-pages/.git\(/.*\)?' -delete
-          cp -ar ./dokkoo/doc/* ./gh-pages
+          
+          cd ./dokkoo
+          cargo doc --no-deps --document-private-items --release
+          cd ../
+          
+          cp -ar ./dokkoo/target/doc/* ./gh-pages
           touch ./gh-pages/.nojekyll
           tee -a ./gh-pages/.nojekyll > /dev/null <<EOT
 
