--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install compiler toolchain
         run: |
-          sudo yum -y install gcc rpm-build
+          sudo dnf -q install gcc rpm-build
       - name: Setup Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -26,7 +26,6 @@ jobs:
           target: x86_64-unknown-linux-gnu
           default: true
           profile: minimal
-          #components: rust-src
       - name: Install 'cargo-rpm'
         uses: actions-rs/cargo@v1
         with:
