--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,11 +38,11 @@ doc = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-files = "0.5.0"
-actix-rt = "1.1.1"
-actix-web = "3.3.2"
+actix-files = "0.6.0-beta.2"
+actix-rt = "2.0.2"
+actix-web = "4.0.0-beta.2"
 chrono = { version = "0.4.19", features = ["unstable-locales"] }
-clap = { version = "3.0.0-beta.2", features = ["yaml", "wrap_help"] }
+clap = { version = "3.0.0-beta.2", features = ["suggestions", "color", "wrap_help"] }
 futures = "0.3.13"
 glob = "0.3.0"
 lazy_static = "1.4.0"
