--- a/.github/workflows/lint_code.yml
+++ b/.github/workflows/lint_code.yml
@@ -29,6 +29,6 @@ jobs:
       - name: Commit changes to code, if any
         run: |
           git config --global user.name 'Dokkoo'
-          git config --global user.email 'MadeByEmil@users.noreply.github.com'
+          git config --global user.email 'Dirout@users.noreply.github.com'
           git diff --quiet && git diff --staged --quiet || git commit -am "Automatically approved suggested code corrections by linter"
           git push
