--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,10 +41,12 @@ doc = false
 actix-files = "0.6.0-beta.2"
 actix-rt = "2.1.0"
 actix-web = "4.0.0-beta.3"
+anyhow = "1.0.38"
 chrono = { version = "0.4.19", features = ["unstable-locales"] }
 clap = { version = "3.0.0-beta.2", features = ["suggestions", "color", "wrap_help"] }
 futures = "0.3.13"
 glob = "0.3.0"
+human-panic = "1.0.3"
 lazy_static = "1.4.0"
 liquid = "0.22.0"
 liquid-core = "0.22.0"
@@ -59,9 +61,17 @@ stopwatch = "0.0.7"
 [profile.release]
 codegen-units = 1
 opt-level = 3
+debug = false
+debug-assertions = false
+overflow-checks = false
 lto = true
-debug = 0
+incremental = false
+rpath = false
 panic = 'abort'
+
+[profile.release.build-override]
+opt-level = 3
+codegen-units = 1
 
 [package.metadata.deb]
 section = "utility"
