Define Rust toolchain
Building on ARM macOS:

cargo build --release --all-features --target aarch64-apple-darwin; cd ./target/aarch64-apple-darwin/release/; strip ./dokkoo; chmod +x ./dokkoo; tar -cvf aarch64-dokkoo.osx.tar dokkoo libdokkoo.dylib libdokkoo.a

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ version = "0.3.0"
 authors = ["Emil Sayahi <limesayahi@gmail.com>"]
 edition = "2018"
 categories = ["command-line-utilities", "parser-implementations", "text-processing"]
-exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "renovate.json", "/azure-pipelines.yml", "/snapcraft.yaml"]
+exclude = ["/.github/**/*", "/branding/**/*", "/.gitignore", "/.whitesource", "renovate.json", "/azure-pipelines.yml", "/snapcraft.yaml", "/rust-toolchain"]
 license = "AGPL-3.0-or-later"
 description = "Mokk (Macro Output Key Kit) implementation written in Rust."
 repository = "https://github.com/Dirout/dokkoo"
