--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,9 @@ serde = "1.0.123"
 serde_yaml = "0.8.17"
 stopwatch = "0.0.7"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+jemallocator = "0.3.2"
+
 [profile.release]
 codegen-units = 1
 opt-level = 3
