--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,15 +50,13 @@ lazy_static = "1.4.0"
 liquid = "0.22.0"
 liquid-core = "0.22.0"
 liquid-lib = { version = "0.22.0", features = ["stdlib", "jekyll", "shopify", "extra"] }
+mimalloc = { version = "0.1.25", default-features = false }
 notify = "4.0.15"
 pathdiff = "0.2.0"
 pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
 serde = "1.0.123"
 serde_yaml = "0.8.17"
 stopwatch = "0.0.7"
-
-[target.'cfg(not(target_env = "msvc"))'.dependencies]
-jemallocator = "0.3.2"
 
 [profile.release]
 codegen-units = 1
