--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@
 #
 #    You should have received a copy of the GNU Affero General Public License
 #    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
-cargo-features = ["strip"]
+cargo-features = ["edition2021", "strip"]
 [package]
 name = "dokkoo"
 version = "0.3.0"
