--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,23 +39,26 @@ doc = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-files = "0.6.0-beta.2"
-actix-rt = "2.1.0"
-actix-web = "4.0.0-beta.3"
-anyhow = "1.0.38"
+actix-files = "0.6.0-beta.4"
+actix-http = "=3.0.0-beta.5"
+actix-rt = "2.2.0"
+actix-service = "=2.0.0-beta.5"
+actix-web = "=4.0.0-beta.5"
+anyhow = "1.0.40"
 chrono = { version = "0.4.19", features = ["unstable-locales"] }
 clap = { version = "3.0.0-beta.2", features = ["suggestions", "color", "wrap_help"] }
-futures = "0.3.13"
+derive_more = { version = "0.99.13", features = ["convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
+futures = "0.3.14"
 glob = "0.3.0"
 lazy_static = "1.4.0"
 liquid = "0.22.0"
 liquid-core = "0.22.0"
 liquid-lib = { version = "0.22.0", features = ["stdlib", "jekyll", "shopify", "extra"] }
 mimalloc = { version = "0.1.25", default-features = false }
-notify = "4.0.15"
+notify = "4.0.16"
 pathdiff = "0.2.0"
 pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
-serde = "1.0.123"
+serde = "1.0.125"
 serde_yaml = "0.8.17"
 stopwatch = "0.0.7"
 
