--- a/.cargo/config
+++ b/.cargo/config
@@ -1,2 +1,28 @@
-[build]
-rustflags = ["-C", "link-arg=-fuse-ld=lld", "target-cpu=native", "tune-cpu=native", "-Z", "strip=symbols", "build-std", "control-flow-guard", "unstable-options"]
+#    This file is part of Dokkoo.
+#
+#    Dokkoo is free software: you can redistribute it and/or modify
+#    it under the terms of the GNU Affero General Public License as published by
+#    the Free Software Foundation, either version 3 of the License, or
+#    (at your option) any later version.
+#
+#    Dokkoo is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU Affero General Public License for more details.
+#
+#    You should have received a copy of the GNU Affero General Public License
+#    along with Dokkoo.  If not, see <https://www.gnu.org/licenses/>.
+[target.aarch64-apple-darwin]
+rustflags = ["-C", "target-cpu=native", "-Z", "strip=symbols", "-Z", "unstable-options", "-Z", "tune-cpu=native"]
+
+[target.x86_64-apple-darwin]
+rustflags = ["-C", "target-cpu=native", "-Z", "strip=symbols", "-Z", "unstable-options", "-Z", "tune-cpu=native", "-Z", "build-std", "--target", "x86_64-apple-darwin"]
+
+[target.x86_64-pc-windows-msvc]
+rustflags = ["-C", "link-arg=-fuse-ld=lld", "-C", "target-cpu=native", "-Z", "tune-cpu=native", "-Z", "strip=symbols", "-Z", "build-std", "--target", "x86_64-pc-windows-msvc", "-Z", "control-flow-guard", "-Z", "unstable-options"]
+
+[target.aarch64-unknown-linux-gnu]
+rustflags = ["-C", "link-arg=-fuse-ld=lld", "-C", "target-cpu=native", "-Z", "tune-cpu=native", "-Z", "strip=symbols", "-Z", "build-std", "--target", "aarch64-unknown-linux-gnu", "-Z", "unstable-options"]
+
+[target.x86_64-unknown-linux-gnu]
+rustflags = ["-C", "link-arg=-fuse-ld=lld", "-C", "target-cpu=native", "-Z", "tune-cpu=native", "-Z", "strip=symbols", "-Z", "build-std", "--target", "x86_64-unknown-linux-gnu", "-Z", "unstable-options"]
