--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Setup Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: nightly
-          target: x86_64-pc-windows-msvc
+          toolchain: nightly-gnu
+          target: x86_64-pc-windows-gnu
           default: true
           profile: minimal
       - name: Build Dokkoo
@@ -21,10 +21,10 @@ jobs:
         with:
           use-cross: true
           command: build
-          args: --release --all-features --target x86_64-pc-windows-msvc
+          args: --release --all-features --target x86_64-pc-windows-gnu
       - name: Prepare Dokkoo for upload
         run: |
-          cd ./target/x86_64-pc-windows-msvc/release/
+          cd ./target/x86_64-pc-windows-gnu/release/
           tar -czvf x86_64-dokkoo.win32.zip `
           dokkoo.exe `
           dokkoo.dll `
@@ -33,5 +33,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: x86_64-dokkoo.win32
-          path: ./target/x86_64-pc-windows-msvc/release/x86_64-dokkoo.win32.zip
+          path: ./target/x86_64-pc-windows-gnu/release/x86_64-dokkoo.win32.zip
           if-no-files-found: error
