--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -27,7 +27,7 @@ jobs:
           tar -czvf x86_64-dokkoo.win32.zip `
           dokkoo.exe `
           dokkoo.dll `
-          dokkoo.lib
+          dokkoo.dll.a
       - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
