--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -24,11 +24,11 @@ jobs:
       - name: Prepare Dokkoo for upload
         run: |
           cd ./target/x86_64-pc-windows-gnu/release/
-          dir
           tar -czvf x86_64-dokkoo.win32.zip `
           dokkoo.exe `
           dokkoo.dll `
-          dokkoo.dll.a
+          libdokkoo.a `
+          libdokkoo.dll.a
       - name: Upload Dokkoo build artifacts to GitHub
         uses: actions/upload-artifact@v2
         with:
