--- a/.github/workflows/format_code.yml
+++ b/.github/workflows/format_code.yml
@@ -1,7 +1,4 @@
-on:
-  push:
-    branches:    
-        - master
+on: [push]
 
 name: Format codebase
 
@@ -13,7 +10,7 @@ jobs:
       - name: Checkout codebase
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
