--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,23 +44,24 @@ actix-http = "3.0.4"
 actix-rt = "2.7.0"
 actix-service = "2.0.2"
 actix-web = "4.0.1"
-anyhow = "1.0.56"
+anyhow = "1.0.57"
 chrono = { version = "0.4.19", features = ["unstable-locales"] }
-clap = { version = "3.1.6", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
+clap = { version = "3.1.18", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
 derive_more = { version = "0.99.17", features = ["convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
 futures = "0.3.21"
 glob = "0.3.0"
 lazy_static = "1.4.0"
-liquid = "0.24.0"
-liquid-core = "0.24.1"
-liquid-lib = { version = "0.24.0", features = ["stdlib", "jekyll", "shopify", "extra"] }
-mimalloc = { version = "0.1.28", default-features = false }
+liquid = "0.26.0"
+liquid-core = "0.26.0"
+liquid-lib = { version = "0.26.0", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
+mimalloc = { version = "0.1.29", default-features = false }
 notify = "4.0.17"
 pathdiff = "0.2.1"
 pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
-serde = "1.0.136"
-serde_yaml = "0.8.23"
+serde = "1.0.137"
+serde_yaml = "0.8.24"
 stopwatch = "0.0.7"
+wild = "2.1.0-alpha.2"
 
 [profile.release]
 codegen-units = 1
