--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,7 +47,7 @@ actix-web = "4.0.1"
 anyhow = "1.0.57"
 chrono = { version = "0.4.19", features = ["unstable-locales"] }
 clap = { version = "3.1.18", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
-derive_more = { version = "0.99.17", features = ["convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
+derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
 futures = "0.3.21"
 glob = "0.3.0"
 lazy_static = "1.4.0"
