--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,29 +39,29 @@ doc = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-files = "0.6.1"
-actix-http = "3.1.0"
+actix-files = "0.6.2"
+actix-http = "3.2.1"
 actix-rt = "2.7.0"
 actix-service = "2.0.2"
 actix-web = "4.1.0"
-anyhow = "1.0.57"
-chrono = { version = "0.4.19", features = ["unstable-locales"] }
-clap = { version = "3.2.5", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
+anyhow = "1.0.64"
+chrono = { version = "0.4.22", features = ["unstable-locales"] }
+clap = { version = "3.2.20", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
 derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
-futures = "0.3.21"
+futures = "0.3.24"
 glob = "0.3.0"
 lazy_static = "1.4.0"
 liquid = "0.26.0"
 liquid-core = "0.26.0"
 liquid-lib = { version = "0.26.0", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
 mimalloc = { version = "0.1.29", default-features = false }
-notify = "4.0.17"
+notify = "5.0.0"
 pathdiff = "0.2.1"
-pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
-serde = "1.0.137"
-serde_yaml = "0.9.2"
+pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
+serde = "1.0.144"
+serde_yaml = "0.9.11"
 stopwatch = "0.0.7"
-wild = "2.1.0-alpha.2"
+wild = "2.1.0"
 
 [profile.release]
 codegen-units = 1
