Fix serving, and snippets in subdirs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,11 +41,10 @@ doc = false
 [dependencies]
 actix-files = "0.6.2"
 actix-http = "3.2.1"
-actix-rt = "2.7.0"
 actix-service = "2.0.2"
 actix-web = "4.1.0"
 anyhow = "1.0.64"
-chrono = { version = "0.4.22", features = ["unstable-locales"] }
+chrono = { version = "0.4.22", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
 clap = { version = "3.2.20", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
 derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
 futures = "0.3.24"
@@ -58,9 +57,11 @@ mimalloc = { version = "0.1.29", default-features = false }
 notify = "5.0.0"
 pathdiff = "0.2.1"
 pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
+relative-path = "1.7.2"
 serde = "1.0.144"
 serde_yaml = "0.9.11"
 stopwatch = "0.0.7"
+tokio = { version = "1.21.0", features = ["full"] }
 wild = "2.1.0"
 
 [profile.release]
