Add relative paths, better errors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,6 @@ actix-files = "0.6.2"
 actix-http = "3.2.1"
 actix-service = "2.0.2"
 actix-web = "4.1.0"
-anyhow = "1.0.64"
 chrono = { version = "0.4.22", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
 clap = { version = "3.2.20", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
 derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
@@ -53,6 +52,7 @@ lazy_static = "1.4.0"
 liquid = "0.26.0"
 liquid-core = "0.26.0"
 liquid-lib = { version = "0.26.0", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
+miette = { version = "5.3.1", features = ["fancy"] }
 mimalloc = { version = "0.1.29", default-features = false }
 notify = "5.0.0"
 pathdiff = "0.2.1"
