--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -56,7 +56,8 @@ jobs:
           EOT
           
           chmod 600 /root/.ssh/config
-          chmod 400 /root/.ssh/aur
+          chmod 600 /root/.ssh/aur
+          chmod 644 /root/.ssh/aur.pub
           ssh-keyscan -H aur.archlinux.org >> /root/.ssh/known_hosts
       - name: Upload Dokkoo Pacman package
         uses: actions/upload-artifact@v3
@@ -77,7 +78,9 @@ jobs:
           git config --global user.email "limesayahi@gmail.com"
           chmod 777 dokkoo-bin
           cd ./dokkoo-bin
+          rm ./dokkoo-*-x86_64.tar.gz
           cp -avf ../PKGBUILD ./
+          cp -avf ../dokkoo-*-x86_64.tar.gz ./
           su -s /bin/sh nobody -c "makepkg --printsrcinfo" > .SRCINFO
           git add -A
           git commit -m "Automatically updating Dokkoo package via GitHub Actions (see repository for release notes)"
