--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -25,6 +25,8 @@ jobs:
       - name: Prepare Dokkoo for upload
         run: |
           cd ./target/aarch64-unknown-linux-gnu/release/
+          strip -v --strip-all ./dokkoo
+          strip -v --strip-all ./libdokkoo.so
           strip -v --strip-all ./libdokkoo.a
           chmod +x ./dokkoo
           tar -cvf aarch64-dokkoo.gnu+linux.tar \
