--- a/.github/workflows/update_deps.yml
+++ b/.github/workflows/update_deps.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
-          args: --all-targets --release
+          args: --all-targets --all-features --release
       - name: Commit changes, if any
         run: |
           git config --global user.name 'Dokkoo'
