--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,8 +61,8 @@ pulldown-cmark = { version = "0.9.2", default-features = false, features = ["sim
 relative-path = "1.7.3"
 serde = "1.0.152"
 serde_yaml = "0.9.17"
-ticky = "1.0.1"
-tokio = { version = "1.24.2", features = ["full"] }
+ticky = { git = "https://github.com/Dirout/ticky.git" }
+tokio = { version = "1.25.0", features = ["full"] }
 wild = "2.1.0"
 
 [profile.release]
@@ -74,7 +74,6 @@ overflow-checks = false
 lto = true
 incremental = false
 rpath = false
-panic = 'abort'
 strip = "symbols"
 
 [profile.release.build-override]
