--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,28 +41,29 @@ doc = false
 actix-files = "0.6.2"
 actix-http = "3.3.0"
 actix-service = "2.0.2"
-actix-web = "4.3.0"
+actix-web = "4.3.1"
 ahash = { version = "0.8.3", features = ["std", "serde", "runtime-rng"] }
 chrono = { version = "0.4.23", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
-clap = { version = "4.1.4", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
+clap = { version = "4.1.8", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
 derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
 futures = "0.3.26"
 glob = "0.3.1"
+latex2mathml = "0.2.3"
 lazy_static = "1.4.0"
-liquid = "0.26.0"
-liquid-core = "0.26.0"
-liquid-lib = { version = "0.26.0", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
+liquid = "0.26.1"
+liquid-core = "0.26.1"
+liquid-lib = { version = "0.26.1", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
 miette = { version = "5.5.0", features = ["fancy"] }
 mimalloc = { version = "0.1.34", default-features = false }
 notify = "5.1.0"
-path-clean = "0.1.0"
+path-clean = "1.0.1"
 pathdiff = "0.2.1"
 pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
 relative-path = "1.7.3"
 serde = "1.0.152"
 serde_yaml = "0.9.17"
 ticky = { git = "https://github.com/Dirout/ticky.git" }
-tokio = { version = "1.25.0", features = ["full"] }
+tokio = { version = "1.26.0", features = ["full"] }
 wild = "2.1.0"
 
 [profile.release]
@@ -98,3 +99,6 @@ assets = [
   { source = "README", dest = "/usr/share/doc/dokkoo/README", mode = "644" },
   { source = "COPYING", dest = "/usr/share/doc/dokkoo/COPYING", mode = "644" },
 ]
+
+[registries.crates-io]
+protocol = "sparse"
