--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,26 +44,28 @@ actix-service = "2.0.2"
 actix-web = "4.3.1"
 ahash = { version = "0.8.3", features = ["std", "serde", "runtime-rng"] }
 chrono = { version = "0.4.24", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
-clap = { version = "4.1.13", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
+clap = { version = "4.2.1", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
 derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
-futures = "0.3.27"
+futures = "0.3.28"
 glob = "0.3.1"
+html-minifier = "4.0.0"
 latex2mathml = "0.2.3"
 lazy_static = "1.4.0"
 liquid = "0.26.1"
 liquid-core = "0.26.1"
 liquid-lib = { version = "0.26.1", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
-miette = { version = "5.6.0", features = ["fancy"] }
-mimalloc = { version = "0.1.34", default-features = false }
+miette = { version = "5.7.0", features = ["fancy"] }
+mimalloc = { version = "0.1.35", default-features = false }
 notify = "5.1.0"
 path-clean = "1.0.1"
 pathdiff = "0.2.1"
 pulldown-cmark = { version = "0.9.2", default-features = false, features = ["simd"] }
 relative-path = "1.8.0"
-serde = "1.0.158"
+serde = "1.0.159"
 serde_yaml = "0.9.19"
-ticky = { git = "https://github.com/Dirout/ticky.git" }
-tokio = { version = "1.26.0", features = ["full"] }
+sys-locale = "0.2.4"
+ticky = { version = "1.0.2", features = ["stdtime"] }
+tokio = { version = "1.27.0", features = ["full"] }
 wild = "2.1.0"
 
 [profile.release]
