--- a/.github/workflows/aarch64.yml
+++ b/.github/workflows/aarch64.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build Dokkoo
         uses: actions-rs/cargo@v1
         with:
-          use-cross: true
+          use-cross: false
           command: build
           args: --release --all-features --target aarch64-unknown-linux-gnu
       - name: Prepare Dokkoo for upload
