--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -47,8 +47,8 @@ jobs:
           git config --global user.name 'Dokkoo'
           git config --global user.email 'Dirout@users.noreply.github.com'
           git add ./rust-dokkoo.spec
-          git diff --quiet && git diff --staged --quiet || git commit -am "Automatically updated RPM package specification"
-          git push https://${{ secrets.PAT }}@github.com/Dirout/dokkoo.git
+          git commit -am "Automatically updated RPM package specification"
+          git push
       - name: Build & package Dokkoo
         run: |
           cd ./dokkoo
