--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -23,7 +23,7 @@ jobs:
           sudo dnf -q -y install git gh gcc rpm-build rpmdevtools rpmlint python3-rust2rpm rust-packaging rust cargo tree perl perl-FindBin perl-lib > /dev/null
       - name: Checkout codebase
         run: |
-          printf "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+          printf "${{ secrets.PAT }}" | gh auth login --with-token
           gh repo clone Dirout/dokkoo
           cd ./dokkoo
           printf "Repository:\n" && tree -a ./
