--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -23,7 +23,7 @@ jobs:
           sudo dnf -q -y install git gh gcc rpm-build rpmdevtools rpmlint python3-rust2rpm rust-packaging rust cargo tree perl perl-FindBin perl-lib > /dev/null
       - name: Checkout codebase
         run: |
-          printf "${{ secrets.PAT }}" | gh auth login --with-token
+          printf "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
           gh repo clone Dirout/dokkoo
           cd ./dokkoo
           printf "Repository:\n" && tree -a ./
@@ -48,7 +48,7 @@ jobs:
           git config --global user.email 'Dirout@users.noreply.github.com'
           git add ./rust-dokkoo.spec
           git commit -am "Automatically updated RPM package specification"
-          git push
+          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/Dirout/dokkoo.git
       - name: Build & package Dokkoo
         run: |
           cd ./dokkoo
