Add missing build job(s) to Packit config
Packit will now additionally require for each test job requiring build
a build job definition to be present in the Packit configuration file. See details
in https://github.com/packit/packit-service/issues/1775.

--- a/packit.yaml
+++ b/packit.yaml
@@ -17,6 +17,11 @@ srpm_build_deps:
   - rust-packaging
 jobs:
   - job: copr_build
+    trigger: pull_request
+    targets:
+    - fedora-all
+  
+  - job: copr_build
     trigger: commit
     branch: master
     targets:
