--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,8 @@ actix-service = "2.0.2"
 actix-web = "4.3.1"
 ahash = { version = "0.8.3", features = ["std", "serde", "runtime-rng"] }
 chrono = { version = "0.4.26", features = ["alloc", "std", "clock", "serde", "unstable-locales"] }
-clap = { version = "4.3.12", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
+clap = { version = "4.3.19", features = ["cargo", "suggestions", "color", "wrap_help", "unicode"] }
+comrak = { version = "0.18.0", features = ["syntect", "shortcodes"] }
 derive_more = { version = "0.99.17", features = ["default", "convert_case", "generate-parsing-rs", "testing-helpers", "nightly", "peg", "rustc_version" ] }
 futures = "0.3.28"
 glob = "0.3.1"
@@ -54,16 +55,15 @@ lazy_static = "1.4.0"
 liquid = "0.26.4"
 liquid-core = "0.26.4"
 liquid-lib = { version = "0.26.4", features = ["all", "stdlib", "jekyll", "shopify", "extra"] }
-miette = { version = "5.9.0", features = ["fancy"] }
+miette = { version = "5.10.0", features = ["fancy"] }
 mimalloc = { version = "0.1.37", default-features = false }
-notify = "5.2.0"
+notify = "6.0.1"
 path-clean = "1.0.1"
 pathdiff = "0.2.1"
-pulldown-cmark = { version = "0.9.3", default-features = false, features = ["simd"] }
 relative-path = "1.8.0"
-serde = "1.0.171"
-serde_yaml = "0.9.23"
-sys-locale = "0.2.4"
+serde = "1.0.174"
+serde_yaml = "0.9.25"
+sys-locale = "0.3.0"
 ticky = { version = "1.0.2", features = ["stdtime"] }
 tokio = { version = "1.29.1", features = ["full"] }
 wild = "2.1.0"
