--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -47,9 +47,10 @@ jobs:
           git config --global --add safe.directory ./
           git config --global user.name 'Dokkoo'
           git config --global user.email 'Dirout@users.noreply.github.com'
+          git remote add origin https://Dirout:${{ secrets.GITHUB_TOKEN }}@github.com/Dirout/dokkoo
           git add ./rust-dokkoo.spec
           git commit -am "Automatically updated RPM package specification"
-          git push https://${{ secrets.GITHUB_TOKEN }}@github.com/Dirout/dokkoo.git
+          git push
       - name: Build & package Dokkoo
         run: |
           cd ./dokkoo
