--- a/.github/workflows/rpm.yml
+++ b/.github/workflows/rpm.yml
@@ -47,7 +47,7 @@ jobs:
           git config --global --add safe.directory ./
           git config --global user.name 'Dokkoo'
           git config --global user.email 'Dirout@users.noreply.github.com'
-          git remote add origin https://Dirout:${{ secrets.GITHUB_TOKEN }}@github.com/Dirout/dokkoo
+          git remote set-url origin https://Dirout:${{ secrets.GITHUB_TOKEN }}@github.com/Dirout/dokkoo
           git add ./rust-dokkoo.spec
           git commit -am "Automatically updated RPM package specification"
           git push
